<resources>
    <string name="app_name">Shopping Assignment</string>
    <!-- Login And SignUp Screen-->
    <string name="login_home">Login Screen</string>
    <string name="sign_home">Create Account</string>
    <string name="app_create_acc">Create Account.</string>
    <string name="app_email_hint">Email</string>
    <string name="app_pass_hint">Password</string>
    <string name="app_remember">Remember Me</string>
    <string name="app_login_btn">Login</string>
    <string name="app_log_Ot_btn">Log Out</string>
    <string name="app_sign_btn">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="app_next">Register</string>
    <!-- Sign Up Screen -->
    <string name="wrong_detail">Pleas,Enter the Correct Info</string>
    <string name="wrong_email">Please,Enter the Correct Email</string>
    <string name="wrong_password">Password is Weak :( </string>
    <string name="wrong_phone">Please,Enter the Correct Phone Number</string>
    <!-- Product Screen -->
    <string name="app_home">Shopping.</string>
    <string name="image_desc">Product Images</string>
    <string name="see_it">See All</string>
    <string name="my_category">Categories</string>
    <string name="user_name">Hey Alex,</string>
    <string name="user_desc">Find a Product among the Treading Brands.</string>
    <!-- product Description-->
    <string name="app_cart">Add Cart</string>
    <string name="app_buy">BUY</string>
</resources>