<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <dialog
        android:id="@+id/myDialog"
        android:name="com.example.cargo.utils.MyDialog"
        android:label="MyDialog" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="message"
            app:argType="string" />
    </dialog>
    <action
        android:id="@+id/action_global_myDialog"
        app:destination="@id/myDialog" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.cargo.ui.LoginFragment"
        android:label="@string/login_home"
        tools:layout="@layout/login_fragment_screen" >
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/ente_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim" />
        <action
            android:id="@+id/action_loginFragment_to_shoppingDashBoardFragment"
            app:destination="@id/shoppingDashBoardFragment"
            app:enterAnim="@anim/ente_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.cargo.ui.SignUpFragment"
        android:label="@string/sign_home"
        tools:layout="@layout/registration_fragment" >
        <action
            android:id="@+id/action_signUpFragment_to_shoppingDashBoardFragment"
            app:destination="@id/shoppingDashBoardFragment"
            app:enterAnim="@anim/ente_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoppingDashBoardFragment"
        android:name="com.example.cargo.ui.ShoppingDashBoardFragment"
        android:label="@string/app_home"
        tools:layout="@layout/product_screen_fragment" >
        <action
            android:id="@+id/action_shoppingDashBoardFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/ente_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.cargo.ui.ProductDetailFragment"
        android:label="{category}"
        tools:layout="@layout/product_description_fragment" >
        <argument
            android:name="category"
            app:argType="string"
            android:defaultValue="My Product" />
        <argument
            android:name="shop"
            app:argType="com.example.cargo.data.ShoppingProductItem" />
        <argument
            android:name="maxprice"
            app:argType="string" />
    </fragment>
</navigation>